# flowlist

./: README.md  index.html  package.json  tsconfig.json  tsconfig.node.json  产品计划书.md
.github/workflows/: build.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AddTask.tsx  Sidebar.tsx  StatsPanel.tsx  TaskDetail.tsx  TaskItem.tsx  TaskList.tsx
src/hooks/: useGlobalShortcuts.ts  useReminders.ts  useTheme.ts
src/lib/: db.ts
src/stores/: useStore.ts
src/styles/: globals.css
src/types/: index.ts
