[package]
name = "flowlist"
version = "0.2.0-beta"
description = "A lightweight, offline, beautiful Windows todo list app"
authors = ["FlowList Team"]
edition = "2021"

[lib]
name = "flowlist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-autostart = "~2.2"
tauri-plugin-dialog = "~2.2"
tauri-plugin-global-shortcut = "~2.2"
tauri-plugin-notification = "~2.2"
tauri-plugin-process = "~2.2"
tauri-plugin-sql = { version = "~2.2", features = ["sqlite"] }
tauri-plugin-shell = "~2.2"
serde_json = "1"
