[package]
name = "flowlist"
version = "0.2.0"
description = "A lightweight, offline, beautiful Windows todo list app"
authors = ["FlowList Team"]
edition = "2021"

[lib]
name = "flowlist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"
